# vesuvianite

./: .gitignore  CMakeLists.txt  DisplayImage.cpp  README.md
apps/: CMakeLists.txt  app.cxx
include/vesuvianite/: ConvexHull.hpp  GetScaledIsolationRect.hpp  HoughLines.hpp  IsolateSubject.hpp  RawLoader.hpp  SourceImage.hpp  SubjectPlacement.hpp  XMPWriter.hpp  XmpWriter.hpp  lib.hpp
src/: CMakeLists.txt  ConvexHull.cxx  GetScaledIsolationRect.cxx  HoughLines.cxx  IsolateSubject.cxx  RawLoader.cxx  SourceImage.cxx  T2T_CanonEOS_5DSR_20220930_v3.xmp  XMPWriter.cxx  XmpWriter.cxx  lib.cxx  main.cxx
xmpsdk/: CMakeLists.txt
xmpsdk/src/: CMakeLists.txt
